--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -28,5 +28,12 @@
 //Офер вопрос
 @import 'components/articlesSlider';
 
+//Страница каталога
+@import 'components/catalog-page';
+
+@import 'components/about';
+
+@import 'components/contacts';
+
 
 @import 'components/footer';
