--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,6 +350,121 @@ body {
   margin-bottom: 10px;
 }
 
+.breadcrumbs {
+  margin: 20px 0 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.breadcrumbs a {
+  font-weight: 500;
+  color: #000;
+  text-decoration: none;
+  font-size: 14px;
+  position: relative;
+  margin-right: 10px;
+  padding-right: 20px;
+}
+.breadcrumbs a:hover {
+  text-decoration: underline;
+}
+.breadcrumbs a::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 8px;
+  top: 6px;
+  height: 1px;
+  background-color: #000;
+  -webkit-transform: rotate(30deg);
+      -ms-transform: rotate(30deg);
+          transform: rotate(30deg);
+}
+.breadcrumbs a::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 10px;
+  width: 8px;
+  height: 1px;
+  background-color: #000;
+  -webkit-transform: rotate(-30deg);
+      -ms-transform: rotate(-30deg);
+          transform: rotate(-30deg);
+}
+.breadcrumbs a:last-child {
+  margin: 0;
+  pointer-events: none;
+  opacity: 0.7;
+}
+.breadcrumbs a:last-child::before {
+  display: none;
+}
+.breadcrumbs a:last-child::after {
+  display: none;
+}
+
+.page__title {
+  margin: 20px 0 30px;
+}
+.page__title h1 {
+  margin: 0;
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.pagination {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.pagination button {
+  border: none;
+  background-color: transparent;
+  font-weight: 500;
+  font-size: 18px;
+  cursor: pointer;
+  -webkit-transition: 0.45s ease;
+  transition: 0.45s ease;
+}
+.pagination button:hover {
+  color: #1E90FF;
+}
+.pagination .pagination__nums {
+  margin: 0 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.pagination .pagination__nums a {
+  font-size: 16px;
+  color: #000;
+  font-weight: 700;
+  text-decoration: none;
+  margin: 0 2px;
+  padding: 5px;
+  -webkit-transition: 0.35s ease;
+  transition: 0.35s ease;
+}
+.pagination .pagination__nums a:hover {
+  color: #1E90FF;
+}
+.pagination .pagination__nums a.active {
+  color: #1E90FF;
+}
+
 .main-btn {
   display: block;
   width: -webkit-fit-content;
@@ -414,6 +529,92 @@ body {
   border-radius: 1px;
   background-color: #000;
   opacity: 0.5;
+}
+
+.close-menu {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+}
+.close-menu::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: calc(50% - 2px);
+  width: 100%;
+  height: 2px;
+  background-color: #000;
+  border-radius: 1px;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.close-menu::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: calc(50% - 2px);
+  width: 100%;
+  height: 2px;
+  background-color: #000;
+  border-radius: 1px;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.black_modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  opacity: 0;
+  z-index: 4;
+  background-color: #000;
+  visibility: hidden;
+}
+.black_modal.active {
+  visibility: visible;
+  opacity: 0.4;
+}
+
+.cart-btn {
+  width: 100%;
+  display: block;
+  background-color: #51a8ff;
+  color: #fff !important;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px 5px;
+  border-radius: 10px;
+  overflow: hidden;
+  font-size: 18px;
+  -webkit-transition: 0.35s ease;
+  transition: 0.35s ease;
+}
+.cart-btn:hover {
+  background-color: #188bff;
+}
+
+.btn-category-show {
+  padding: 10px 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #188bff;
+  color: #fff;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
 }
 
 .header__top {
@@ -670,6 +871,93 @@ body {
     text-align: center;
   }
 }
+.mobile__menu {
+  position: fixed;
+  opacity: 0;
+  visibility: hidden;
+  right: -50%;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  top: 0;
+  width: 100%;
+  max-width: 240px;
+  height: 100%;
+  z-index: 10;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2509803922);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2509803922);
+  padding: 40px 15px 0 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.mobile__menu.active {
+  visibility: visible;
+  opacity: 1;
+  right: 0;
+}
+.mobile__menu a {
+  color: #000;
+  font-weight: 500;
+  text-decoration: none;
+}
+.mobile__nav ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.mobile__nav ul li {
+  margin-bottom: 5px;
+}
+.mobile__nav ul li:last-child {
+  margin-bottom: 0;
+}
+.mobile__actions {
+  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.mobile__actions a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 10px;
+}
+.mobile__actions a img {
+  display: inline-block;
+  margin-right: 10px;
+  height: 20px;
+  width: 20px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
+}
+.mobile__actions a.mobile__profile {
+  margin-bottom: 15px;
+}
+.mobile__actions a.mobile__profile img {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+.mobile__actions a:last-child {
+  margin-bottom: 0;
+}
+
 .hero__slider {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -693,12 +981,10 @@ body {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
   opacity: 0.4;
   -webkit-transition: 0.35s ease;
   transition: 0.35s ease;
+  position: relative;
 }
 .hero__slider-slide.swiper-slide-active {
   opacity: 1;
@@ -738,6 +1024,38 @@ body {
     margin-bottom: 20px;
   }
 }
+.swiper-gl {
+  position: relative;
+  margin: 0 auto;
+  max-width: 100%;
+  overflow: hidden;
+}
+.swiper-gl .swiper-slide {
+  position: relative;
+}
+.swiper-gl .swiper-gl-image {
+  display: none;
+}
+.swiper-gl > canvas {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-gl-image {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
 .slider-catalog__title {
   margin-bottom: 30px;
 }
@@ -1059,6 +1377,450 @@ body {
 @media (max-width: 920px) {
   .articles__slider {
     margin-right: -15px;
+  }
+}
+.catalog__category {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 20px 30px;
+  background-color: #fff;
+  border-radius: 25px;
+  overflow: hidden;
+  margin-bottom: 30px;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1882352941);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1882352941);
+}
+.catalog__category p {
+  font-size: 24px;
+  font-weight: 700;
+  display: block;
+  margin: 15px 0 20px;
+}
+.catalog__category-head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.catalog__category-lists {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  overflow: hidden;
+  opacity: 0;
+  max-height: 0;
+  -webkit-transition: 0.45s ease;
+  transition: 0.45s ease;
+}
+.catalog__category-lists.active {
+  max-height: -webkit-max-content;
+  max-height: -moz-max-content;
+  max-height: max-content;
+  opacity: 1;
+}
+.catalog__category-lists ul {
+  list-style: none;
+  padding: 0;
+  margin: 0 10px 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: calc(25% - 20px);
+}
+.catalog__category-lists ul li a {
+  font-size: 18px;
+  font-weight: 500;
+  color: #000;
+  text-decoration: none;
+}
+.catalog__category-lists ul li a:hover {
+  color: #188bff;
+}
+.catalog__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  margin: 0 -10px 25px;
+}
+.catalog__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: calc(20% - 20px);
+  margin: 0 10px 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #000;
+}
+.catalog__item:hover .img img {
+  -webkit-transform: scale(1.05);
+      -ms-transform: scale(1.05);
+          transform: scale(1.05);
+}
+.catalog__item a {
+  text-decoration: none;
+  color: inherit;
+}
+.catalog__item .details .item-cat {
+  font-size: 12px;
+  opacity: 0.8;
+}
+.catalog__item .details .item-name {
+  margin-top: 0;
+  font-weight: 500;
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+.catalog__item .details .item-price {
+  font-weight: 700;
+  font-size: 20px;
+}
+.catalog__item .action {
+  padding-top: 10px;
+}
+.catalog__item .img {
+  display: block;
+  padding-bottom: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  height: 220px;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 20px;
+}
+.catalog__item .img img {
+  -webkit-transition: 0.15s ease;
+  transition: 0.15s ease;
+  display: block;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media (max-width: 920px) {
+  .catalog__item {
+    width: calc(25% - 20px);
+  }
+}
+@media (max-width: 768px) {
+  .catalog__category {
+    border-radius: 10px;
+    padding: 15px 15px 15px;
+  }
+  .catalog__category p {
+    font-size: 16px;
+    margin-right: 15px;
+  }
+  .catalog__category-head button {
+    font-size: 14px;
+    padding: 10px;
+  }
+  .catalog__item {
+    width: calc(33.33% - 20px);
+  }
+  .catalog__item .img {
+    height: auto;
+  }
+  .catalog__category-lists ul {
+    width: calc(33.33% - 20px);
+  }
+}
+@media (max-width: 620px) {
+  .catalog__item {
+    width: calc(50% - 20px);
+  }
+  .catalog__category-lists ul {
+    width: calc(50% - 20px);
+  }
+}
+.aboutpage__banner {
+  margin-bottom: 50px;
+}
+.aboutpage__banner video {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  overflow: hidden;
+  border-radius: 15px;
+}
+.aboutpage__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-bottom: 40px;
+  padding: 15px 0;
+}
+.aboutpage__content .text {
+  width: 50%;
+}
+.aboutpage__content .text h2 {
+  font-size: 18px;
+  line-height: 1.2;
+  display: block;
+  margin: 0;
+  margin-bottom: 30px;
+}
+.aboutpage__content .text p {
+  font-size: 16px;
+  font-weight: 500;
+  color: #000;
+  line-height: 1.3;
+}
+.aboutpage__content .text a {
+  display: block;
+  max-width: none;
+  width: 100%;
+  text-align: center;
+}
+.aboutpage__content .img {
+  width: 50%;
+  margin-left: 30px;
+}
+.aboutpage__content .img img {
+  display: block;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 20px;
+}
+
+@media (max-width: 640px) {
+  .aboutpage__content .text {
+    width: 100%;
+    max-width: none;
+    margin-right: 0;
+  }
+  .aboutpage__content .text .mobile-picture .img {
+    width: 100%;
+    margin: 0;
+    max-height: 240px;
+    overflow: hidden;
+  }
+  .aboutpage__content .text .mobile-picture .img img {
+    width: 100%;
+    height: 240px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center;
+       object-position: center;
+  }
+}
+.contactpage {
+  padding: 20px 0 40px;
+}
+.contactpage__content .img {
+  margin-bottom: 40px;
+  position: relative;
+}
+.contactpage__content .img img {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  height: 360px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  overflow: hidden;
+  border-radius: 20px;
+}
+.contactpage__content .img h2 {
+  position: absolute;
+  left: 15px;
+  top: 15px;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #000;
+  opacity: 0.75;
+}
+.contactpage__info-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 40px;
+}
+.contactpage__info {
+  margin-bottom: 40px;
+}
+.contactpage__info h2 {
+  font-size: 24px;
+  margin: 0;
+  margin-bottom: 0px;
+}
+.contactpage__info h3 {
+  margin: 0;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+.contactpage__info p {
+  font-size: 18px;
+  font-weight: 500;
+  margin: 0;
+  margin-bottom: 10px;
+}
+.contactpage__info p a {
+  color: #188bff;
+  text-decoration: none;
+  display: inline-block;
+  margin-left: 10px;
+}
+.contactpage__info p a:hover {
+  text-decoration: underline;
+}
+.contactpage__info p:last-child {
+  margin-bottom: 0;
+}
+.contactpage__map {
+  width: 50%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  overflow: hidden;
+  border-radius: 20px;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1882352941);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1882352941);
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.contactpage__form {
+  width: 50%;
+  margin-right: 30px;
+}
+.contactpage__form form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.contactpage__form form .action {
+  max-width: 560px;
+}
+.contactpage__form form .action button {
+  width: 100%;
+  max-width: none;
+}
+.contactpage__form form p {
+  font-size: 24px;
+  font-weight: 700;
+  margin: 0;
+  margin-bottom: 10px;
+}
+.contactpage__form form > span {
+  display: block;
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.contactpage__form form label {
+  display: block;
+  margin-bottom: 10px;
+  max-width: 560px;
+}
+.contactpage__form form label span {
+  display: block;
+  font-size: 14px;
+  color: #000;
+  opacity: 0.8;
+  font-size: 16px;
+  padding-left: 15px;
+  margin-bottom: 5px;
+}
+.contactpage__form form label input {
+  display: block;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px 25px;
+  border: 1px solid rgba(0, 0, 0, 0.062745098);
+  outline: none;
+  border-radius: 15px;
+  font-size: 18px;
+  color: #000;
+  -webkit-transition: 0.45s ease;
+  transition: 0.45s ease;
+}
+.contactpage__form form label input:hover {
+  border-color: #188bff;
+}
+.contactpage__form form label input:focus {
+  border-color: #188bff;
+}
+.contactpage__form form label textarea {
+  display: block;
+  font-size: 18px;
+  color: #000;
+  -webkit-transition: 0.45s ease;
+  transition: 0.45s ease;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px 25px;
+  border: 1px solid rgba(0, 0, 0, 0.062745098);
+  outline: none;
+  border-radius: 15px;
+  resize: none;
+  min-height: 240px;
+}
+.contactpage__form form label textarea:hover {
+  border-color: #188bff;
+}
+.contactpage__form form label textarea:focus {
+  border-color: #188bff;
+}
+
+@media (max-width: 768px) {
+  .contactpage__info-wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .contactpage__form {
+    width: 100%;
+    display: block;
+    margin: 0 0 30px;
+    max-width: none;
+  }
+  .contactpage__form form {
+    max-width: none;
+  }
+  .contactpage__map {
+    width: 100%;
+    max-width: none;
+    height: 360px;
+    max-width: 560px;
+    margin: 0 0 30px;
   }
 }
 .footer {
