--- a/assets/scss/components/_global.scss
+++ b/assets/scss/components/_global.scss
@@ -36,3 +36,101 @@ body {
     display: block;
     margin-bottom: 10px;
 }
+
+.breadcrumbs {
+    margin: 20px 0 30px;
+    display: flex;
+    a {
+        font-weight: 500;
+        color: #000;
+        text-decoration: none;
+        font-size: 14px;
+        position: relative;
+        margin-right: 10px;
+        padding-right: 20px;
+        &:hover {
+            text-decoration: underline;
+        }
+        &::before {
+            content: '';
+            position: absolute;
+            right: 0;
+            width: 8px;
+            top: 6px;
+            height: 1px;
+            background-color: #000;
+            transform: rotate(30deg);
+        }
+        &::after {
+            content: '';
+            position: absolute;
+            right: 0;
+            top: 10px;
+            width: 8px;
+            height: 1px;
+            background-color: #000;
+            transform: rotate(-30deg);
+        }
+        &:last-child {
+            margin: 0;
+            pointer-events: none;
+            opacity: .7;
+            &::before {
+                display: none;
+            }
+            &::after {
+                display: none;
+            }
+        }
+    }
+}
+
+.page {
+    &__title {
+        margin: 20px 0 30px;
+        h1 {
+            margin: 0;
+            font-size: 28px;
+            font-weight: 700;
+        }
+    }
+}
+
+.pagination {
+    width: fit-content;
+    margin: 0 auto 30px;
+    display: flex;
+    align-items: center;
+    button {
+        border: none;
+        background-color: transparent;
+        font-weight: 500;
+        font-size: 18px;
+        cursor: pointer;
+        transition: .45s ease;
+        &:hover {
+            color: #1E90FF;
+        }
+    }
+    .pagination__nums {
+        margin: 0 15px;
+        box-sizing: border-box;
+        display: flex;
+        align-items: center;
+        a {
+            font-size: 16px;
+            color: #000;
+            font-weight: 700;
+            text-decoration: none;
+            margin: 0 2px;
+            padding: 5px;
+            transition: .35s ease;
+            &:hover {
+                color: #1E90FF;
+            }
+            &.active {
+                color: #1E90FF;
+            }
+        }
+    }
+}
