--- a/assets/scss/components/_hero.scss
+++ b/assets/scss/components/_hero.scss
@@ -24,11 +24,18 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+       
         opacity: .4;
         transition: .35s ease;
+        position: relative;
+        img {
+            // position: absolute;
+            // left: 0;
+            // top: 0;
+            // width: 100%;
+            // height: 100%;
+            // z-index: -1;
+        }
         &.swiper-slide-active {
             opacity: 1;
         }
@@ -75,3 +82,34 @@
         }
     }
 }
+
+
+.swiper-gl {
+    position: relative;
+    margin: 0 auto;
+    max-width: 100%;
+    overflow: hidden;
+    .swiper-slide {
+      position: relative;
+    }
+    .swiper-gl-image {
+      display: none;
+    }
+    > canvas {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .swiper-gl-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+  
