--- a/assets/scss/components/_catalog-page.scss
+++ b/assets/scss/components/_catalog-page.scss
@@ -31,6 +31,57 @@
        }
        
     }
+    &__filter-content {
+        box-sizing: border-box;
+        padding: 20px 30px;
+        background-color: #fff;
+        border-radius: 25px;
+        overflow: hidden;
+        margin-bottom: 30px;
+        box-shadow: 0 0 10px #00000030;
+    }
+    &__filter {
+        box-sizing: border-box;
+        padding: 20px 30px;
+        background-color: #fff;
+        border-radius: 25px;
+        overflow: hidden;
+        margin-bottom: 30px;
+        box-shadow: 0 0 10px #00000030;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .btn-wrap {
+            display: flex;
+            align-items: center;
+            &:first-child {
+                margin-right: 30px;
+            }
+            span {
+                margin-right: 15px;
+            }
+            button {
+                cursor: pointer;
+                svg {
+                    fill: #fff;
+                    margin-right: 5px;
+                }
+                border: none;
+                outline: none;
+                background-color: #188bff;
+                color: #fff;
+                padding: 5px 10px;
+                border-radius: 10px;
+                display: flex;
+                align-items: center;
+                svg{
+                     display: block;
+                     width: 20px;
+                     height: 20px;
+                }
+            }
+        }
+    }
     &__category-head {
         display: flex;
         align-items: center;
