--- a/assets/scss/components/_catalog-page.scss
+++ b/assets/scss/components/_catalog-page.scss
@@ -2,18 +2,18 @@
 
     // .catalogpage__wrap
 
-    &__wrap {
-    }
+    &__wrap {}
 }
-.container {
-}
+
+.container {}
+
 .page {
 
     // .page__title
 
-    &__title {
-    }
+    &__title {}
 }
+
 .catalog {
     &__category {
         box-sizing: border-box;
@@ -23,14 +23,16 @@
         overflow: hidden;
         margin-bottom: 30px;
         box-shadow: 0 0 10px #00000030;
-       p {
-        font-size: 24px;
-        font-weight: 700;
-        display: block;
-        margin: 15px 0 20px;
-       }
-       
+
+        p {
+            font-size: 24px;
+            font-weight: 700;
+            display: block;
+            margin: 15px 0 20px;
+        }
+
     }
+
     &__filter-content {
         box-sizing: border-box;
         padding: 20px 30px;
@@ -40,6 +42,7 @@
         margin-bottom: 30px;
         box-shadow: 0 0 10px #00000030;
     }
+
     &__filter {
         box-sizing: border-box;
         padding: 20px 30px;
@@ -51,21 +54,27 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+
         .btn-wrap {
             display: flex;
             align-items: center;
+
             &:first-child {
                 margin-right: 30px;
             }
+
             span {
                 margin-right: 15px;
             }
+
             button {
                 cursor: pointer;
+
                 svg {
                     fill: #fff;
                     margin-right: 5px;
                 }
+
                 border: none;
                 outline: none;
                 background-color: #188bff;
@@ -74,19 +83,22 @@
                 border-radius: 10px;
                 display: flex;
                 align-items: center;
-                svg{
-                     display: block;
-                     width: 20px;
-                     height: 20px;
+
+                svg {
+                    display: block;
+                    width: 20px;
+                    height: 20px;
                 }
             }
         }
     }
+
     &__category-head {
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
+
     &__category-lists {
         display: flex;
         align-items: stretch;
@@ -95,22 +107,26 @@
         opacity: 0;
         max-height: 0;
         transition: .45s ease;
+
         &.active {
             max-height: max-content;
             opacity: 1;
         }
+
         ul {
             list-style: none;
             padding: 0;
             margin: 0 10px 15px;
             box-sizing: border-box;
             width: calc(25% - 20px);
+
             li {
                 a {
                     font-size: 18px;
                     font-weight: 500;
                     color: #000;
                     text-decoration: none;
+
                     &:hover {
                         color: #188bff;
                     }
@@ -118,6 +134,7 @@
             }
         }
     }
+
     // .catalog__items
 
     &__items {
@@ -136,6 +153,7 @@
         margin: 0 10px 20px;
         box-sizing: border-box;
         color: #000;
+
         &:hover {
             .img {
                 img {
@@ -143,32 +161,37 @@
                 }
             }
         }
+
         a {
             text-decoration: none;
             color: inherit;
         }
+
         .details {
             .item-cat {
                 font-size: 12px;
                 opacity: .8;
             }
+
             .item-name {
                 margin-top: 0;
                 font-weight: 500;
                 margin-bottom: 5px;
                 font-size: 18px;
             }
+
             .item-price {
                 font-weight: 700;
                 font-size: 20px;
             }
         }
+
         .action {
             padding-top: 10px;
-            a {
-                
-            }
+
+            a {}
         }
+
         .img {
             display: block;
             padding-bottom: 10px;
@@ -177,13 +200,14 @@
             width: 100%;
             overflow: hidden;
             border-radius: 20px;
+
             img {
                 transition: .15s ease;
                 display: block;
                 width: 100%;
                 object-fit: cover;
             }
-            
+
         }
     }
 }
@@ -195,28 +219,34 @@
         }
     }
 }
+
 @media(max-width:768px) {
     .catalog {
         &__category {
             border-radius: 10px;
             padding: 15px 15px 15px;
+
             p {
                 font-size: 16px;
                 margin-right: 15px;
             }
         }
+
         &__category-head {
             button {
                 font-size: 14px;
                 padding: 10px;
             }
         }
+
         &__item {
             width: calc(33.33% - 20px);
+
             .img {
                 height: auto;
             }
         }
+
         &__category-lists {
             ul {
                 width: calc(33.33% - 20px);
@@ -224,15 +254,124 @@
         }
     }
 }
+
 @media(max-width:620px) {
     .catalog {
         &__item {
             width: calc(50% - 20px);
         }
+
         &__category-lists {
             ul {
                 width: calc(50% - 20px);
             }
+        }
+    }
+}
+
+.catalogpage {
+    padding: 30px 0;
+    box-sizing: border-box;
+    // .catalogpage__wrap
+
+    &__wrap {
+        display: flex;
+        align-items: stretch;
+    }
+
+    &__items-settings {
+        margin-bottom: 20px;
+        box-sizing: border-box;
+    }
+
+    // .catalogpage__filters
+
+    &__filters {
+        min-width: 240px;
+        width: 100%;
+        box-sizing: border-box;
+        max-width: 260px;
+        margin-right: 30px;
+        background-color: #fff;
+        border-radius: 20px;
+        box-shadow: 0px 4px 12px 0px rgba(148, 148, 148, 0.2);
+        padding: 20px 10px;
+        p {
+            margin: 0;
+            display: block;
+            margin-bottom: 20px;
+            font-weight: 700;
+            font-size: 18px;
+        }
+    }
+
+
+    // .catalogpage__items-wrap
+
+    &__items-wrap {
+
+    }
+
+    // .catalogpage__items
+
+    &__items {
+        display: flex;
+        flex-wrap: wrap;
+        box-sizing: border-box;
+        margin: 0 -10px;
+        .catalog__item {
+            width: calc(25% - 20px);
+            @media(max-width:1200px) {
+                width: calc(33.33% - 20px);
+            }
+            @media(max-width:920px) {
+                width: calc(50% - 20px);
+            }
+            @media(max-width:760px) {
+
+            }
+            @media(max-width:620px) {
+
+            }
+        }
+    }
+
+    // .catalogpage__pagination
+
+    &__pagination {
+        display: flex;
+        a {
+            padding: 10px;
+            display: block;
+            font-size: 18px;
+            color: #000;
+            text-decoration: none;
+            margin-right: 15px;
+            font-weight: 700;
+            text-align: center;
+            line-height: 1.1;
+            &:hover {
+                color: #188bff;
+            }
+            &.active {
+                color: #188bff;
+            }
+        }
+    }
+}
+
+
+@media(max-width:820px) {
+    .catalogpage {
+        &__wrap {
+            flex-direction: column;
+        }
+        &__filters {
+            width: 100%;
+            box-sizing: border-box;
+            margin: 0;
+            max-width: none;
+            min-width: none;
         }
     }
 }
